4th video finished set fragment_start.xml -button Room created 2 menu exit and delete

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="appLargeText">20sp</dimen>
     <dimen name="appNormalText">16sp</dimen>
     <dimen name="btnWidth">250dp</dimen>
+    <dimen name="btn_width">250dp</dimen>
 </resources>
