--- a/app/src/main/res/layout/fragment_add_new_note.xml
+++ b/app/src/main/res/layout/fragment_add_new_note.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNewNoteFragment">
+    tools:context=".screens.AddNewNoteFragment">
 
     <EditText
         android:id="@+id/inputNameNote"
