--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.MainFragment">
+    tools:context=".screens.main.MainFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
