--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.NoteFragment">
+    tools:context=".screens.note.NoteFragment">
     <TextView
         android:id="@+id/tvNameNote"
         android:layout_width="match_parent"
